<resources>
    <string name="app_name">Github Profile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_page_title">Profile</string>
    <string name="followers_label">followers</string>
    <string name="following_label">following</string>
    <string name="pinned_label">Pinned</string>
    <string name="top_repositories_label">Top Repositories</string>
    <string name="starred_repositories_label">Starred Repositories</string>
    <string name="data_load_failed_error">Data loading failed. Please try again later.</string>
</resources>