<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/page_padding"
            tools:context=".home.HomeActivity">

            <TextView
                android:id="@+id/home_title"
                style="TextViewStyle.heading.subHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_page_title"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                style="@style/roundedImageViewRounded"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/large_avatar_margin"
                android:layout_marginEnd="@dimen/large_avatar_margin"
                android:layout_marginRight="@dimen/large_avatar_margin"
                android:layout_marginBottom="@dimen/large_avatar_margin"
                android:contentDescription="@null"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_title" />

            <TextView
                android:id="@+id/profile_name"
                style="@style/TextViewStyle.heading.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintLeft_toRightOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <TextView
                android:id="@+id/handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="@id/profile_name"
                app:layout_constraintTop_toBottomOf="@id/profile_name" />

            <TextView
                android:id="@+id/email"
                style="@style/TextViewStyle.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <TextView
                android:id="@+id/followers_count"
                style="@style/TextViewStyle.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/followers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginEnd="@dimen/double_margin"
                android:layout_marginRight="@dimen/double_margin"
                android:text="@string/followers_label"
                app:layout_constraintLeft_toRightOf="@id/followers_count"
                app:layout_constraintTop_toTopOf="@id/followers_count" />

            <TextView
                android:id="@+id/following_count"
                style="@style/TextViewStyle.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                android:layout_marginLeft="@dimen/double_margin"
                app:layout_constraintLeft_toRightOf="@id/followers_label"
                app:layout_constraintTop_toTopOf="@id/followers_count" />

            <TextView
                android:id="@+id/following_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:text="@string/following_label"
                app:layout_constraintLeft_toRightOf="@id/following_count"
                app:layout_constraintTop_toTopOf="@id/followers_count" />

            <TextView
                android:id="@+id/pinned_label"
                style="@style/TextViewStyle.heading.subHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/pinned_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/following_count" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_view_all"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/pinned_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pinned_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pinned_label" />

            <TextView
                android:id="@+id/top_label"
                style="@style/TextViewStyle.heading.subHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/top_repositories_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pinned_repositories" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_view_all"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/top_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/top_label" />

            <TextView
                android:id="@+id/starred_label"
                style="@style/TextViewStyle.heading.subHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/starred_repositories_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_repositories" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_view_all"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/starred_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/starred_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/starred_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>